rustfs-ton/ingress-s3-ts.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-tailscale
  namespace: rustfs
spec:
  selector:
    app: rustfs
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
  type: ClusterIP
