rustfs-ton/ingress-ts.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs-tailscale
  namespace: rustfs
spec:
  selector:
    app: rustfs
  ports:
  - protocol: TCP
    port: 9001
    targetPort: 9001
  type: ClusterIP
